# felucca

./: README.md  pyproject.toml
.github/workflows/: release.yml
felucca/: main.py  utils.py
felucca/backend/: protostar.py  python_package.py
felucca/core/: enums.py  utils.py
tests/: test_main.py
