[build-system]
requires = [ "poetry_core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "felucca"
version = "0.2.1"
description = "Cairo dependency management and packaging made easy."
readme = "README.md"
authors = [ "Fran Algaba <f.algaba.work@gmail.com>",]
license = "MIT"
keywords = [ "packaging", "dependency", "poetry",]
classifiers = [ "Topic :: Software Development :: Build Tools", "Topic :: Software Development :: Libraries :: Python Modules",]

[felucca.contracts]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
typer = "^0.4.1"
rich = "^12.0.1"
click = "8.0.4"
toml = "^0.10.2"
requests = "^2.27.1"
cookiecutter = "^1.7.3"
GitPython = "^3.1.30"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^20.8b1"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.6.0"
pydocstyle = "^5.1.1"
pre-commit = "^2.9.3"
flake8 = "^3.9.2"
typed-ast = "^1.5.4"

[tool.poetry.scripts]
felucca = "felucca.main:app"
